--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WeatherPro</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FW68BH86YV"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-FW68BH86YV");
+    </script>
   </head>
   <body>
     <div id="root"></div>
